# kubetest

./: .gitignore  Procfile  README.md  buildall.sh  config.py  create-deployment.yaml  create-ingress.yaml  data-dev.sqlite  data.sqlite  geofriends.py  http.c  httpheader.c  httpheader.h  httpheader.h.gch  patch.patch  sc.yaml  sql-server.yaml  storage.yaml
.github/workflows/: deploytoAksCluster.yml
app/: __init__.py  email.py  fake.py  models.py
app/api/: __init__.py  authentication.py  decorators.py  locations.py  posts.py  users.py
app/auth/: forms.py  views.py
app/main/: __init__.py  errors.py  forms.py  views.py
app/static/: styles.css
app/templates/: 403.html  _macros.html  _posts.html  base.html  contact.html  edit_post.html  edit_profile.html  followers.html  index.html  map.html  post.html  user.html
database/: Dockerfile  create-deployment.yaml  create_database.c
http/: create-deployment.yaml
http2/: Dockerfile  create-deployment.yaml  http.c  httpheader.c
jobs/createdatabase/: Dockerfile  create-deployment.yaml  create_database.c  createdatabase.py
k8s/: storage.yaml
k8s/lib/: httpheader.cc
k8s/manifests/: deployment.yml
lib/: httpheader.cc
location/: CMakeLists.txt  Dockerfile  create-deployment.yaml  locationservice.grpc.pb.h  locationservice.pb.cc  locationservice.pb.h
location/protocrepo/: locationservice.grpc.pb.cc  locationservice.grpc.pb.h  locationservice.pb.cc  locationservice.pb.h
manifests/: service.yml
protocrepo/: locationservice.proto
requirements/: common.txt  dev.txt  heroku.txt
tests/: test_user_model.py
(+58 files in other folders)
